--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcc 'S'
 - !lcsh 'Young, Arthur, 1741-1820'
 - !lcsh 'Tull, Jethro, 1674-1741'
+- GITenberg
 tableOfContents: 'Jethro Tull: founder of the principles of dry-farming -- Coke of
   Norfolk: father of experimental farms -- Arthur Young: author of the agricultural
   tour -- John Sinclair: founder of the Board of Agriculture -- Cyrus H. McCormick:
